# coin_ai

./: .gitignore  4_point_align.ipynb  4_point_lightning.ipynb  MANIFEST.in  README.md  alignment_train.ipynb  alignment_train_2.ipynb  data.py  inference.ipynb  inference.py  lightning_test.ipynb  lora.py  memory_data.py  model.py  pyproject.toml  train.py
src/coin_ai/: augmentations.py  learner.py  losses.py  metrics.py
src/coin_ai/alignment/: data.py  dense.py  hformer.py  infra.py  lightning.py  types.py  warper.py
src/coin_ai/data/: data.py  inference.py  memory_data.py
src/coin_ai/fg_segmentation/: __init__.py  make_annos.py  model.py  segmentation_linear_24_03_03.pt  train.ipynb
src/coin_ai/models/: lora.py  readout.py
