[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coin_ai"
version = "0.0.1"
authors = [
  { name="Michal Jan Tyszkiewicz", email="michal.tyszkiewicz@gmail.com" },
]
description = "Coin recognition"

requires-python = ">=3.10"
#include-package-data = true

dependencies = [
    "torch >= 2.0",
    "einops",
    "matplotlib",
    "numpy",
    "kornia",
    "lightning",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-data]
coin_ai = ["*.pt"]
